--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>h0k4l0h</title>
 </head>
 <body>
+    background-image: url('https://cdn.wallpapersafari.com/36/22/DHK4hb.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
+    background-size: 100% 100%;
+    
     <h1>Wolcome To syahirasri website </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae accusantium sunt voluptatem natus quidem quis unde autem aspernatur nam, eligendi molestiae explicabo at ea ex aliquid quam soluta excepturi eum!</p>
 </body>
