--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>h0k4l0h</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css" media="all">
 </head>
-<body>
-    <h1>Wolcome To syahirasri website </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae accusantium sunt voluptatem natus quidem quis unde autem aspernatur nam, eligendi molestiae explicabo at ea ex aliquid quam soluta excepturi eum!</p>
+<body vlink="white">
+    <script type="text/javascript" src="https://rawgit.com/maringngerrang/js/master/salju.js" ></script> 
+    <script type="text/javascript"> snowStorm.snowColor = 'skyblue'; snowStorm.flakesMaxActive = 150; snowStorm.useTwinkleEffect = true;</script>
+
+    <pre class="title">
++-+-+-+-+-+-+-+
+|h|0|k|4|l|0|h|
++-+-+-+-+-+-+-+</pre>
+
+    <hr size="3px" width="95%" text-align="center" color="#DCD9CF">
+
+    <img src="img/hokaloh.jpg" alt="hokaloh" class="profilepicture" width="200" height="185">
+    
+    <br>
+    <br>
+    <p style="font-size:0.9vw;" >Welcome To syahirasri (me!) personal website . This is where you can find my blog posts and links to my videos. Currently, this website is still in under maintenance, so there aren't many things can be found here. Hope you enjoy visiting this website though ^_^</p>
+    <iframe src="https://www.youtube.com/embed/zqLEO5tIuYs?autoplay=1&mute=1" width="500" height="315" frameborder="0"></iframe>
+
+    <br>
+    <hr4 class="center_bottom">
+        <a href="">Blog</a> +
+        <a href="">Github</a> +
+        <a href="">Facebook</a> +
+        <a href="https://www.instagram.com/mohdsyahiir/">Instagram</a>
+    </hr4>
+
+    <br>
+    <img src="img/public_domain.png" alt="public_domain" width="90" height="80">
 </body>
 </html>
